# parser-kwork

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.toml  local-compose.yaml  pyproject.toml
src/: config.py  logger.py  main.py  models.py  parser.py  publisher.py
