[project]
name = "parser-kwork"
version = "0.1.0"
description = "Парсер биржи Kwork для leadar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faststream[rabbit]>=0.5.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=5.0.0",
    "structlog>=25.5.0",
]
